testcases/bad/test16.tig
/* Error: type `a` is involved in cyclic definition */

let
    type a=c
    type b=a
    type c=d
    type d=a
in
    ""
end
